--- a/index - Copy.html
+++ b/index - Copy.html
@@ -45,7 +45,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active bg-warning border rounded p-3">
                 <div class="row">
-                    <div class="col-7 d-flex align-items-center">
+                    <div class="col-lg-7 d-flex align-items-center">
                        <div>
                         <h2>Best Quality Headphone</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae repellendus reiciendis autem corporis distinctio esse error ullam rerum, suscipit dolorum?</p>
@@ -53,14 +53,14 @@
                         <a class="btn btn-primary text-light font-weight-bold" href="">Buy Now </a>
                     </div>
                     </div>
-                    <div class="col-5  ">
+                    <div class="col-lg-5  ">
                         <img src="images/banner-images/headphone.png" class="d-block w-100 " alt="...">
                     </div>
                 </div>
               </div>
               <div class="carousel-item active bg-warning border rounded p-3">
                 <div class="row ">
-                    <div class="col-7  d-flex align-items-center">
+                    <div class="col-lg-7  d-flex align-items-center">
                        <div>
                         <h2>X-Box for your living room</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae repellendus reiciendis autem corporis distinctio esse error ullam rerum, suscipit dolorum?</p>
@@ -68,14 +68,14 @@
                         <a class="btn btn-primary text-light font-weight-bold" href="">Buy Now </a>
                     </div>
                     </div>
-                    <div class="col-5">
+                    <div class="col-lg-5">
                         <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
               </div>
               <div class="carousel-item active bg-light border rounded p-3">
                 <div class="row">
-                    <div class="col-7  d-flex align-items-center">
+                    <div class="col-lg-7  d-flex align-items-center">
                        <div>
                         <h2>Mega LCD TV For Sports</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae repellendus reiciendis autem corporis distinctio esse error ullam rerum, suscipit dolorum?</p>
@@ -83,7 +83,7 @@
                         <a class="btn btn-primary text-light font-weight-bold" href="">Buy Now </a>
                     </div>
                     </div>
-                    <div class="col-5 ">
+                    <div class="col-lg-5 ">
                         <img src="images/banner-images/tv.png" class="d-block  w-100" alt="...">
                     </div>
                 </div>
@@ -237,7 +237,7 @@
                 <div class="mb-3 d-flex">
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 <button type="submit" class="btn btn-warning">Send</button>
-              </form>+
+              </form>
       </div>
     </section>
     <!--Subscribe end-->
