--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <section class="container mt-5">
         <h1 class="mb-4">Shoes</h1>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 ">
-            <div class="col">
+            <div class="col" id="remove-content">
               <div class="card h-100 border border-0 shadow-lg">
                 <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -152,11 +152,11 @@
                   <h2 class="text-center">$1289</h2>
                 </div>
                 <div class="m-3 text-center">
-                    <div class="btn panda-btn-warning ">Buy Now <i class="bi bi-arrow-right"></i></div>
+                    <div id="btn-buyNow" class="btn panda-btn-warning" onclick="clickHandler()">Buy Now <i class="bi bi-arrow-right"></i></div>
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col" id="remove-content1">
               <div class="card h-100 border border-0 shadow-lg">
                 <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -165,11 +165,11 @@
                   <h2 class="text-center">$799</h2>
                 </div>
                 <div class="m-3 text-center">
-                 <div class="btn panda-btn-warning">Buy Now <i class="bi bi-arrow-right"></i></div>
+                 <div id="btn-buyNow1" class="btn panda-btn-warning">Buy Now <i class="bi bi-arrow-right"></i></div>
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col" id="remove-content2">
               <div class="card h-100 border border-0 shadow-lg">
                 <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -178,7 +178,7 @@
                   <h2 class="text-center">$699</h2>
                 </div>
                 <div class="m-3 text-center">
-                    <div class="btn panda-btn-warning">Buy Now <i class="bi bi-arrow-right"></i></div>
+                    <div id="btn-buyNow2" class="btn panda-btn-warning">Buy Now <i class="bi bi-arrow-right"></i></div>
                 </div>
               </div>
             </div>
@@ -186,10 +186,10 @@
     </section>
     <!--Shoes Section end-->
     <!--Bag pack start-->
-    <section class="container mt-5">
+    <section class="container mt-5" id="backPack-area">
         <h1 class="mb-4">Backpack</h1>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 ">
-            <div class="col">
+            <div class="col" id="backPack-buy1">
               <div class="card h-100 border border-0 shadow-lg">
                 <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -198,11 +198,11 @@
                   <h2 class="text-center">$1289</h2>
                 </div>
                 <div class="m-3 text-center">
-                    <div class="btn panda-btn-warning ">Buy Now <i class="bi bi-arrow-right"></i></div>
+                    <div id="buy-now1" class="btn panda-btn-warning ">Buy Now <i class="bi bi-arrow-right"></i></div>
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col" id="backPack-buy2">
               <div class="card h-100 border border-0 shadow-lg">
                 <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -211,11 +211,11 @@
                   <h2 class="text-center">$799</h2>
                 </div>
                 <div class="m-3 text-center">
-                 <div class="btn panda-btn-warning">Buy Now <i class="bi bi-arrow-right"></i></div>
+                 <div id="buy-now2"  class="btn panda-btn-warning">Buy Now <i class="bi bi-arrow-right"></i></div>
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col" id="backPack-buy3">
               <div class="card h-100 border border-0 shadow-lg">
                 <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -224,7 +224,7 @@
                   <h2 class="text-center">$699</h2>
                 </div>
                 <div class="m-3 text-center">
-                    <div class="btn panda-btn-warning">Buy Now <i class="bi bi-arrow-right"></i></div>
+                    <div id="buy-now3" class="btn panda-btn-warning">Buy Now <i class="bi bi-arrow-right"></i></div>
                 </div>
               </div>
             </div>
@@ -232,15 +232,15 @@
     </section>
     <!--Bag pack End-->
     <!--Subscribe start-->
-    <section style="height:300px ;" class="container rounded-3 mt-5 d-flex justify-content-center align-items-center panda-bg-warning">
+    <section id="panda-bg-js" style="height:300px ;" class="container rounded-3 mt-5 d-flex justify-content-center align-items-center panda-bg-warning">
      <div>
            <h2 class="text-center">LET'S STAY IN TOUCH</h2>
             <P class="text-center">Get updates on sales,specials and more</P>
        
-            <form>
+            <form id="form-delete">
                 <div class="mb-3 d-flex">
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                <button type="submit" class="btn panda-btn-warning">Send</button>
+                  <input id="enable-button" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="please type email">
+                <button id="send-button" type="submit" class="btn panda-btn-warning" disabled>Send</button>
               </form>
       </div>
     </section>
@@ -251,7 +251,7 @@
     <p><small>@2025. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
   </footer>
 <!--Footer end-->
-
+     <script src="js/new.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
