class list added

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <h1 class="mb-4">Shoes</h1>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 ">
             <div class="col" id="remove-content">
-              <div class="card h-100 border border-0 shadow-lg">
+              <div class="card h-100 border border-0 shadow-lg new-border">
                 <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title text-center">Reebok Dart Men's Shoes</h5>
@@ -157,7 +157,7 @@
               </div>
             </div>
             <div class="col" id="remove-content1">
-              <div class="card h-100 border border-0 shadow-lg">
+              <div class="card h-100 border border-0 shadow-lg new-border">
                 <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title text-center ">Reebok Pump</h5>
@@ -170,7 +170,7 @@
               </div>
             </div>
             <div class="col" id="remove-content2">
-              <div class="card h-100 border border-0 shadow-lg">
+              <div class="card h-100 border border-0 shadow-lg new-border">
                 <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title text-center">Reebok All Terrain</h5>
@@ -190,7 +190,7 @@
         <h1 class="mb-4">Backpack</h1>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 ">
             <div class="col" id="backPack-buy1">
-              <div class="card h-100 border border-0 shadow-lg">
+              <div class="card h-100 border border-0 shadow-lg new-border">
                 <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title text-center">Ison Backpack</h5>
@@ -203,7 +203,7 @@
               </div>
             </div>
             <div class="col" id="backPack-buy2">
-              <div class="card h-100 border border-0 shadow-lg">
+              <div class="card h-100 border border-0 shadow-lg new-border">
                 <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title text-center ">Biaowang Backpack</h5>
@@ -216,7 +216,7 @@
               </div>
             </div>
             <div class="col" id="backPack-buy3">
-              <div class="card h-100 border border-0 shadow-lg">
+              <div class="card h-100 border border-0 shadow-lg new-border">
                 <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title text-center">Dxyizu WS54 Smart</h5>
